--- a/eclipse-workspace/Sprint1/pom.xml
+++ b/eclipse-workspace/Sprint1/pom.xml
@@ -9,4 +9,24 @@
   	<maven.compiler.source>1.8</maven.compiler.source>
   	<maven.compiler.target>1.8</maven.compiler.target>
   </properties>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.testfx</groupId>
+  		<artifactId>testfx-junit5</artifactId>
+  		<version>4.0.16-alpha</version>
+  		<scope>test</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.junit.jupiter</groupId>
+  		<artifactId>junit-jupiter-api</artifactId>
+  		<version>5.6.2</version>
+  		<scope>test</scope>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.assertj</groupId>
+  		<artifactId>assertj-core</artifactId>
+  		<scope>test</scope>
+  		<version>3.15.0</version>
+  	</dependency>
+  </dependencies>
 </project>
